# face

./: .gitignore  CMakeLists.txt  README.md
face-server/smartCity-web/: .babelrc  .eslintrc.js  .gitignore  LICENSE  README.md  index.html
face-server/smartCity-web/config/: dev.env.js  index.js  prod.env.js
face-server/smartCity-web/src/: main.js  permission.js
face-server/smartCity-web/src/api/: alipay.js  camera.js  code.js  email.js  login.js  permission.js  picture.js  qiniu.js  redis.js  role.js  timing.js  user.js  userData.js  visits.js
face-server/smartCity-web/src/components/Breadcrumb/: index.vue
face-server/smartCity-web/src/components/GithubCorner/: index.vue
face-server/smartCity-web/src/components/IconSelect/: index.vue  requireIcons.js
face-server/smartCity-web/src/components/Screenfull/: index.vue
face-server/smartCity-web/src/components/ScrollPane/: index.vue
face-server/smartCity-web/src/components/TreeTable/: eval.js  index.vue
face-server/smartCity-web/src/icons/: index.js
face-server/smartCity-web/src/mixins/: initData.js
face-server/smartCity-web/src/router/: index.js
face-server/smartCity-web/src/store/: getters.js  index.js
face-server/smartCity-web/src/store/modules/: api.js  app.js  permission.js  tagsView.js  user.js
face-server/smartCity-web/src/styles/: description.scss  index.scss
face-server/smartCity-web/src/utils/: clipboard.js  index.js  md5.js  permission.js  request.js  validate.js
face-server/smartCity-web/src/views/components/: Editor.vue  IconSelect.vue
face-server/smartCity-web/src/views/dashboard/: index.vue
face-server/smartCity-web/src/views/dashboard/admin/: index.vue
face-server/smartCity-web/src/views/errorPage/: 401.vue  404.vue
face-server/smartCity-web/src/views/layout/components/: TagsView.vue
face-server/smartCity-web/src/views/layout/mixin/: ResizeHandler.js
face-server/smartCity-web/src/views/login/: index.vue
face-server/smartCity-web/src/views/monitor/log/: index.vue  msg.vue
face-server/smartCity-web/src/views/monitor/redis/: index.vue
face-server/smartCity-web/src/views/nested/menu2/: index.vue
face-server/smartCity-web/src/views/system/accessControl/: index.vue
face-server/smartCity-web/src/views/system/camera/: index.vue
face-server/smartCity-web/src/views/system/menu/: index.vue
face-server/smartCity-web/src/views/system/permission/: index.vue
face-server/smartCity-web/src/views/system/role/: index.vue
face-server/smartCity-web/src/views/system/timing/: index.vue
face-server/smartCity-web/src/views/system/user/: center.vue  index.vue
face-server/smartCity-web/src/views/system/userData/: index.vue
face-server/smartCity-web/src/views/tools/aliPay/: index.vue
face-server/smartCity-web/src/views/tools/email/: index.vue
face-server/smartCity-web/src/views/tools/picture/: index.vue
face-server/smartCity-web/src/views/tools/qiniu/: index.vue
face_client/: XMP.sln
face_client/DuiLib/: DuiLib.vcxproj  DuiLib.vcxproj.filters
face_client/DuiLib/Control/: UITreeView.cpp
face_client/DuiLib/Core/: UIControl.cpp  UIControl.h
face_client/DuiLib/Utils/: WinImplBase.cpp
face_client/XMP/: Base64.h  CWininetHttp.cpp  CWininetHttp.h  DuiFrameWnd.cpp  DuiFrameWnd.h  XMP.APS  XMP.vcxproj  XMP.vcxproj.filters  duilib.cpp  duilib.h  main.cpp
face_client/_include/vlc/: stdint.h
face_client/_include/xmp/: AVPlayer.cpp
face_client/x64/Release/: XMP.iobj  XMP.ipdb
face_client/x64/Release/skin/: PlayPanel.xml  XMP.xml  caption.xml
face_sdk/: com_face_sdk_jni_FaceSDK.h  pom.xml
face_server/: pom.xml
face_server/sql/: eladmin.sql  facedb.sql
face_server/src/main/resources/: application-dev.yml  application-prod.yml  application.yml  banner.txt  logback.xml
face_web/: .eslintrc.js  package.json
face_web/config/: dev.env.js  prod.env.js
face_web/src/api/: camera.js  face-log.js  face-user.js  login.js  userData.js
face_web/src/store/: getters.js
face_web/src/store/modules/: api.js  user.js
face_web/src/styles/: index.scss
face_web/src/utils/: request.js
face_web/src/views/dashboard/admin/: index.vue
face_web/src/views/dashboard/admin/components/: LineChart.vue  PanelGroup.vue  PieChart.vue  PieChart2.vue  RaddarChart.vue
face_web/src/views/face/manager/: index.vue
face_web/src/views/face/manager/module/: edit.vue  form.vue  header.vue  upload.vue  uploadUsers.vue
face_web/src/views/layout/: Layout.vue
face_web/src/views/layout/components/: TagsView.vue
face_web/src/views/layout/components/Sidebar/: SidebarItem.vue  index.vue
face_web/src/views/login/: index.vue
face_web/src/views/moban/facedo/: index.vue
face_web/src/views/moban/facedo/module/: edit.vue  form.vue  (+2 more)
face_web/src/views/monitor/log/: index.vue  msg.vue
face_web/src/views/system/accessControl/: index.vue
face_web/src/views/system/camera/: index.vue
face_web/src/views/system/facerecord/: index.vue
face_web/src/views/system/role/: index.vue
face_web/src/views/system/user/: index.vue
face_web/src/views/system/userData/: index.vue
face_web/src/views/tools/picture/: index.vue
imgs/: README.md
src/: CMakeLists.txt  detect.cpp  file_util.cpp  multivideoserver.cpp  recognize.cpp  socket.cpp
src/embedding/: CMakeLists.txt  embedding.cpp
src/include/: FacePreprocess.h  User.h  det1.h  det2.h  detect.h  feature_descriptor.h  file_util.h  helper.h  hog.c  hog.h  ldmarkmodel.cpp  ldmarkmodel.h  modelcfg.h  recognize.h  socket.h
src/include/cereal/: access.hpp  cereal.hpp
src/include/cereal/archives/: binary.hpp  json.hpp  portable_binary.hpp  xml.hpp
src/include/cereal/details/: helpers.hpp  polymorphic_impl.hpp  static_object.hpp  traits.hpp  util.hpp
src/include/cereal/types/: boost_variant.hpp  memory.hpp  polymorphic.hpp  tuple.hpp
src/include/cereal_extension/: ThreadPool.h  mat_cerealisation.hpp  mat_serialization.hpp
src/libs/: README.md  ncnn.lib  opencv_world.lib
src/sdk/: CMakeLists.txt  FaceSDK.java  com_face_sdk_jni_FaceSDK.h  face_sdk.cpp  face_sdk.h  face_sdk_jni.cpp
src/test/: CMakeLists.txt  main.cpp  test.cpp  test.h
(+279 files in other folders)
